api-node-ts/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node
  labels:
    app: api-node
spec:
  selector:
    matchLabels:
      app: api-node
  replicas: 1
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
        - name: api-node
          image: api_node
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 20
            timeoutSeconds: 10
